# vital-mind-insight-medical-ai

backend/: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3f53d4f5f63c_added_the_mixins_pkuuid_and_timestamp.py  e8e20af842b2_added_the_foreign_key_linking_to_user_.py  fef32eba0d88_initial_migration_create_users_table.py  ff89e42182b8_added_the_conversation_model.py
backend/app/api/: route.py
backend/app/api/auth/: __init__.py  route.py
backend/app/api/chat/: __init__.py  data.py  route.py
backend/app/api/conversations/: __init__.py  route.py
backend/app/api/health/: __init__.py  route.py
backend/app/api/message/: __init__.py
backend/app/api/user/: __init__.py  route.py
backend/app/core/: config.py  server.py
backend/app/core/keys/: private_test.pem  public_test.pem
backend/app/core/middlewares/: base.py  cors.py
backend/app/db/: __init__.py  base.py  session.py  transaction.py
backend/app/db/mixins/: __init__.py  (+2 more)
backend/app/dependencies/: __init__.py  authentication.py  current_user.py
backend/app/middlewares/: __init__.py  cors.py
backend/app/models/: __init__.py  conversation.py  message.py  user.py
backend/app/repositories/: __init__.py  base.py  conversation.py  message.py  user.py
backend/app/schemas/: auth.py  conversation.py  health.py  token.py  user.py
backend/app/services/: __init__.py  auth.py  conversation.py  message.py  user.py
backend/app/utils/: __init__.py  auth_cookies.py  jwt_manager.py  password_manager.py
(+67 files in other folders)
